p-gui fix sidebar scrollbar

--- a/perfect-gui/examples/src/styles/_sidebar.css
+++ b/perfect-gui/examples/src/styles/_sidebar.css
@@ -5,10 +5,11 @@
     border-right: 1px solid var(--grey);
     height: 100%;
     background-color: #1b1b1b;
-    width: 120px;
+    width: 200px;
     padding: 40px;
     z-index: 1;
     overflow: auto;
+    box-sizing: border-box;
 }
 
 .sidebar__title {
@@ -29,11 +30,9 @@
 
 .sidebar__item:hover {
     opacity: 1;
-} 
-
-.sidebar__item:first-of-type {
-    
 }
+
+.sidebar__item:first-of-type {}
 
 .sidebar__item:last-of-type {
     margin-bottom: 4rem;
